Netdiscover 0.3-beta7 (Currently working on it)
   * Improved network addresses sanity checks, thanks to Alex.
   * Netmask will be setup to /24 by default if its omited, thanks to Alex.
   * Added .2 .200 hosts to be scanned on fast mode, thanks again to Alex.
   * Some unnecessary mallocs where removed to prevent memory leaks,
     thanks to Alex (SuD) for the patch.
   * Hang when "h" is pressed twice fixed
   * Madriva and RedHat rpm .spec files added, thanks to Francis Giraldeau
     and Guillaume Pratte for the contribution
   * Buffer overflow on search_vendor fixed, thanks to Guillaume Pratte
   * Solaris bus error when freeing a pointer returned by getenv fixed
   * Added parsable output thanks to Guillaume Pratte for the patch
   * Added support to read ranges from a given file using -l switch
   * Manpage updated with new features and some examples
   * Added support to read user config files for ranges and fasmode lists
   * MAC vendors list updated
   * Hang on Ctrl+C fixed, thanks to Alex (SuD) for the patch
   * Improved argument handling, thanks to Alex (SuD) for reporting
   
Netdiscover 0.3-beta6
   * Changed installation path to sbin
   * Added man page, Thanks to Nicolas Weyland  <ufoalien@weyland.ch>
   * Added help screen (pressing "h" while running)
   * Added new screen to display arp request
   * Fixed screen refresh/display problems
   * Improved screen interface to display large hosts lists, j/k or up/down
     arrow keys can now be used to scroll
   * Fixed packet length count display
   
Netdiscover 0.3-beta5
   * Now arp request sender data is added to the stations list
   * Improved sniffer packet processing code
   * Major code cleaning / commenting done
   * If no interface is specified will autoselect firstone available
   * Better error handling, including interface and uid checking
   
Netdiscover 0.3-beta4
   * Fixed header checks on configure.in, thanks to Charlie Brady for reporting